<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.app.sanad.auth.presentation.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_screen"
            android:paddingTop="@dimen/padding_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <include
                android:id="@+id/back_arrow"
                layout="@layout/content_back_arrow"
                android:layout_width="50dp"
                android:visibility="invisible"
                android:layout_height="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/forgot_password_text"                android:textColor="@color/shade_blue"
                app:layout_constraintEnd_toEndOf="@+id/passwordTextField"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:text="@string/login_title"
                android:textStyle="bold"
                android:textColor="@color/shade_blue"
                app:layout_constraintBottom_toBottomOf="@+id/back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/back_arrow" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/circularImageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:strokeWidth="4dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:shapeAppearanceOverlay="@style/circularImageViewShape"
                app:srcCompat="@drawable/ic_user_profile" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back_text"
                android:textColor="@color/black"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_marginTop="@dimen/margin_2_super"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/circularImageView" />
            <TextView
                android:id="@+id/textView10"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_instruction"                android:textColor="@color/medium_gray"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_email"
                style="@style/auth_text_field"
                android:layout_marginTop="@dimen/margin_large"
                android:hint="@string/email_hint"
                app:boxStrokeWidth="0dp"
                android:layout_marginEnd="@dimen/margin_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.email}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextField"
                style="@style/auth_text_field"
                android:layout_marginEnd="@dimen/margin_large"
                android:hint="@string/password_hint"
                android:layout_marginTop="@dimen/margin_large"
                app:boxStrokeWidth="0dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView75">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/log_in"
                style="@style/button_large"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="@dimen/margin_large"
                android:backgroundTint="@color/teal_blue"
                android:text="@string/sign_in"
                app:layout_constraintBottom_toTopOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/margin_large"
                android:text="@string/no_account_text"
                app:layout_constraintBottom_toTopOf="@+id/contact_us"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.37"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/shade_blue"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/textView11" />


            <TextView
                android:id="@+id/contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:text="@string/contact_us"
                android:textColor="@color/shade_blue"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView75"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView75" />

            <TextView
                android:id="@+id/textView75"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="12dp"
                android:text="@string/save_registration_info"
                android:textColor="@color/medium_gray"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toEndOf="@+id/switch1"
                app:layout_constraintTop_toBottomOf="@+id/user_email" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:srcCompat="@drawable/hi" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress"
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>